--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -1,4 +1,10 @@
-<h2 class="text-sm-center">All Posts</h2>
+<h2 class="text-sm-center">
+  All Posts
+  <button type="button" class="btn btn-primary" (click)="onClick()">
+    Create
+  </button>
+</h2>
+
 <hr />
 <div class="card-columns">
   <div *ngFor="let post of posts" class="card">
