--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,2 +1,11 @@
-<app-post-form (formSubmit)="createPost($event)"></app-post-form>
-<app-post-list [posts]="posts"></app-post-list>
+<div [ngSwitch]="currentView">
+  <app-post-form
+    *ngSwitchCase="View.CREATE"
+    (formSubmit)="createPost($event)"
+  ></app-post-form>
+  <app-post-list
+    *ngSwitchCase="View.SHOW_ALL"
+    [posts]="posts"
+    (btnClick)="changeCurrentView(View.CREATE)"
+  ></app-post-list>
+</div>
